# yafs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.py  init.py  readme.txt
src/: CMakeLists.txt  linesCount.py  settings.ini
src/Converter/: CMakeLists.txt  IConverter.h  LIMSaver.h  cBlkConverter.cpp  cBlkConverter.h  cObjConverter.cpp  cObjConverter.h  cXConverter.cpp  cXConverter.h  main.cpp  misc.h
src/GraphicsEngine/: CMakeLists.txt  FontManager.cpp  FontManager.h  IContextManager.h  IMeshData.h  IMeshManager.h  IProgram.h  IShaderGenerator.h  IShaderManager.h  ITexture.h  ITextureManager.h  IVertexDeclaration.h  Material.cpp  Material.h  MaterialInfo.cpp  MaterialInfo.h  MaterialManager.cpp  MaterialManager.h  MiscTypes.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  ShiftEngine.cpp  ShiftEngine.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Utils.cpp  Utils.h  VertexTypes.cpp  VertexTypes.h
src/GraphicsEngine/APIs/D3D11/: D3D11Context.cpp  D3D11Context.h  D3D11ContextManager.cpp  D3D11ContextManager.h  D3D11DepthStencil.h  D3D11Mesh.cpp  D3D11Mesh.h  D3D11MeshManager.cpp  D3D11MeshManager.h  D3D11Program.cpp  D3D11Program.h  D3D11RenderTarget.cpp  D3D11RenderTarget.h  D3D11ShaderGenerator.cpp  D3D11ShaderGenerator.h  D3D11ShaderManager.cpp  D3D11ShaderManager.h  D3D11ShaderProgram.h  D3D11Texture.cpp  D3D11Texture.h  D3D11TextureManager.cpp  D3D11TextureManager.h  D3D11VertexDeclaration.h
src/GraphicsEngine/SceneGraph/: AnimatedSpriteSceneNode.cpp  AnimatedSpriteSceneNode.h  CameraFrustum.cpp  CameraFrustum.h  CameraSceneNode.cpp  CameraSceneNode.h  EmptySceneNode.h  ICameraController.h  ISceneNode.cpp  ISceneNode.h  LightNode.cpp  LightNode.h  LightSceneNode.cpp  LightSceneNode.h  MeshNode.cpp  MeshNode.h  MeshSceneNode.cpp  MeshSceneNode.h  PlainTreeNode.h  QuadTreeNode.cpp  QuadTreeNode.h  SceneGraph.cpp  SceneGraph.h  SkySceneNode.cpp  SkySceneNode.h  SphericalCameraController.cpp  SphericalCameraController.h  SpriteSceneNode.cpp  SpriteSceneNode.h
src/GraphicsEngine/TextLib/: TextSceneNode.cpp  TextSceneNode.h  cFont.h
src/GraphicsEngine/tests/: CMakeLists.txt  CommonTests.cpp  TestCommon.h  TextureManagerTests.cpp
src/MathLib/: CMakeLists.txt  math.h
src/MathLib/math/: AABB.cpp  AABB.h  OOBB.cpp  OOBB.h  aabb2.h  aabb3.h  intersections.cpp  intersections.h  line.h  line2d.h  matrix.h  matrixFuncs.h  oobb2.h  oobb2d.h  oobb3.h  plane.h  quaternion.h  ray.h  ray3.h  vector2.h  vector3.h  vector4.h  vectorsFuncs.h
src/MathLib/tests/: CMakeLists.txt  intersectionTests.cpp  mathUnitTests.cpp  matrixTests.cpp
src/PhysicsEngine/: AABBCollider.cpp  AABBCollider.h  CMakeLists.txt  Entity.cpp  Entity.h  ICollider.h  Manager.cpp  Manager.h  OOBBCollider.cpp  OOBBCollider.h  PhysicsEngine.h  Solver.cpp  Solver.h  SphereCollider.cpp  SphereCollider.h  Types.h
src/PhysicsEngine/tests/: CMakeLists.txt  physicsUnitTests.cpp
src/System/: CMakeLists.txt  InputEngine.cpp  InputEngine.h  cRegWorker.cpp
src/System/Win32/: Application.cpp  Application.h  RegistryWorker.cpp  RegistryWorker.h  System.cpp  System.h
src/Utilities/: AppStateMachine.cpp  AppStateMachine.h  BlockStreamer.cpp  BlockStreamer.h  CMakeLists.txt  IAppState.h  IManager.h  cRefcounted.h  fnv.h  iniloader.cpp  iniloader.h  inputConverter.h  logger.hpp  observer.h  refcounted.h  singleton.h  smart_ptr.h  timer.cpp  timer.h  ut.cpp  ut.h
src/Utilities/tests/: CMakeLists.txt  utilitiesUnitTests.cpp
src/game/: BackgroundManager.cpp  BackgroundManager.h  CMakeLists.txt  Common.h  Component.h  Game.cpp  Game.h  GameObject.h  GoingHomeApplication.cpp  GoingHomeApplication.h  SceneManager.cpp  SceneManager.h  main.cpp
src/game/AI/: AIBase.h  AISmallSpirit.cpp  AISmallSpirit.h
src/game/AI/Actions/: AIAction.cpp  AIAction.h  AIActionEscape.cpp  AIActionEscape.h
src/game/AI/States/: AIState.h  AIStateAttack.cpp  AIStateAttack.h  AIStateDeath.h  AIStateDodge.cpp  AIStateDodge.h  AIStateEscape.cpp  AIStateEscape.h  AIStateIdle.h  AIStatePursuit.cpp  AIStatePursuit.h
src/game/Entities/: BackgroundBlinker.cpp  BackgroundBlinker.h  BackgroundEntity.cpp  BackgroundEntity.h  BackgroundWanderer.cpp  BackgroundWanderer.h  Buffs.cpp  Buffs.h  Enemy.cpp  Enemy.h  Enity.h  Entity.cpp  Entity.h  EntityEventManager.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  ExperiencePoint.cpp  ExperiencePoint.h  LiveEntity.cpp  LiveEntity.h  MineDetectorEntity.cpp  MineDetectorEntity.h  MineEntity.cpp  MineEntity.h  MineTimedEntity.cpp  MineTimedEntity.h  PhysicsEntity.cpp  PhysicsEntity.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  VisualEntity.h  VisualStickerEntity.h
src/game/LevelManagement/: LevelManager.cpp  LevelManager.h
src/game/Spells/: ISpellController.h  ISpellEntity.h  SpellControllers.cpp  SpellControllers.h  SpellEntities.cpp  SpellEntities.h  SpellsDatabase.cpp  SpellsDatabase.h  SpellsDescription.cpp  SpellsDescription.h
src/game/gameStates/: MainMenuState.cpp  MainMenuState.h  gameState.cpp  gameState.h
src/resources/fonts/: 1.fnt2  2.fnt2  3.fnt2  guiDefault.fnt2
src/resources/gamedata/crafting/: campfire.json  fishing_rod.json  fried_fish.json  sharpened_stone.json  stone_axe.json
src/resources/gamedata/entities/: banana.json  campfire.json  coconut.json  palm1.json  palm2.json  smooth_stone.json  stick.json  vine.json
src/resources/gamedata/inventories/: tree.json
src/resources/materials/: campfire.mtl  entity.mtl  error.mtl  fishnet.mtl  generic.mtl  plane.mtl  player.mtl  selectedCube.mtl  waterChunk.mtl  worldChunk.mtl
src/resources/models/: banana.lim  campfire.lim  coconut.lim  flower.lim  palm_tree1.lim  palm_tree2.lim  sack.lim  sharpened_stone.lim  sky.lim  smooth_stone.lim  sphere.lim  testmodel.lim  tree1.lim  vine.lim
src/resources/scenes/: bliss.json  bliss.map
src/resources/shaders/: Billboard.fx  EntityShader.fx  SpriteShader.fx  bbox.fx  coloredalpha.fx  grass.fx  land.fx  sky.fx  sprite.hlsl  text.fx  wsShaderColor.fx  wsShaderGeometry.fx
src/resources/textures/: Thumbs.db
(+20 files in other folders)
